Fix exercise list @ profile page so it doesn't wrap too much

--- a/media/turan/base.css
+++ b/media/turan/base.css
@@ -1072,6 +1072,7 @@ ul.trips li {
     list-style-type: none;
     margin-left: 0;
     padding: 5px;
+    overflow: auto;
 }
 
 .routeimage {
